[isoform cleaner] add program option parsing

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,11 @@
 # CMAKE build folder
+build
 
-/build
+# CMAKE semantig version file
+/src/cmake_generated/project_version.h
+
+# vscode
+.vscode
 
 # Prerequisites
 *.d
