--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,8 +25,11 @@ build:
     - make -j 2
 
   artifacts:
+    name: "$CI_JOB_NAME"
     paths:
-      - build/soformCleaner
+      - $CI_PROJECT_DIR/build
+    expire_in: 1 day
+
       # depending on your build setup it's most likely a good idea to cache outputs to reduce the build time
       # cache:
       #   paths:
@@ -37,6 +40,8 @@ test:
   stage: test
   only:
       - master
+  dependencies:
+    - build
   script:
       - make test
       - cd ../../build
