--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,6 +11,11 @@
 # can use versions as well, like gcc:5.2
 # see https://hub.docker.com/_/gcc/
 
+stages:
+  - build
+  - test
+
+
 build:
   stage: build
   # instead of calling g++ directly you can also use some build toolkit like make
