--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -33,7 +33,8 @@ test programs:
       - make test
       - cd ../tests/integrationTests
       - ./run_all_tests.sh
-      - gcovr -f ../../src/
+      - cd ../../build
+      - gcovr -f ../src/
   coverage: '/\d*\.*\d+%/'
 
         
