--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,12 +9,16 @@ include:
   - template: Code-Quality.gitlab-ci.yml
   - template: Security/SAST.gitlab-ci.yml
 #  - template: Security/Dependency-Scanning.gitlab-ci.yml
-  - template: Security/License-Scanning.gitlab-ci.yml
-#  - template: Security/Secret-Detection.gitlab-ci.yml
+#  - template: Security/License-Scanning.gitlab-ci.yml
+  - template: Security/Secret-Detection.gitlab-ci.yml
 
-license_scanning:
+secret_detection:
   tags:
     - 'dind'
+
+#license_scanning:
+#  tags:
+#    - 'dind'
 
 build tests and executable:
   stage: build
