--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,24 +2,6 @@ stages:
   - build
   - test
 
-services:
-  - docker:20.10.21-dind
-
-include:
-  - template: Code-Quality.gitlab-ci.yml
-  - template: Security/SAST.gitlab-ci.yml
-#  - template: Security/Dependency-Scanning.gitlab-ci.yml
-#  - template: Security/License-Scanning.gitlab-ci.yml
-  - template: Security/Secret-Detection.gitlab-ci.yml
-
-secret_detection:
-  tags:
-    - 'dind'
-
-#license_scanning:
-#  tags:
-#    - 'dind'
-
 build tests and executable:
   stage: build
   tags:
@@ -57,6 +39,20 @@ test programs:
       - cd ../../build
       - gcovr -f ../src/
   coverage: '/\d*\.*\d+%/'
+
+### GITLAB SECURITY TESTS ###
+
+services:
+  - docker:20.10.21-dind
+
+include:
+  - template: Code-Quality.gitlab-ci.yml
+  - template: Security/SAST.gitlab-ci.yml
+  - template: Security/Secret-Detection.gitlab-ci.yml
+
+secret_detection:
+  tags:
+    - 'dind'
 
 code_quality:
   services:
