--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -81,5 +81,7 @@ pages:
   artifacts:
     paths:
     - public
-  only:
-  - master
+  rules:
+    # This ensures that only pushes to the default branch will trigger
+    # a pages deploy
+    - if: $CI_COMMIT_REF_NAME == $CI_DEFAULT_BRANCH
