--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,5 +1,7 @@
 
-SET(isoformCleanertests_src ./unitTests/isoformCleaner/isoformCleaner_tests.cpp ${BSDL_src} ../src/identifyName.cpp ../src/isoformCleaner.cpp)
+SET(isoformCleanertests_src ./unitTests/isoformCleaner/isoformCleaner_tests.cpp ${BSDL_src} ../src/identifyName.cpp ../src/GFFParser.cpp 
+../src/isoformCleaner.cpp
+)
 SET(isoformCleanertests_exe isoformCleaner-Test)
 ADD_EXECUTABLE(${isoformCleanertests_exe} ${isoformCleanertests_src})
 target_link_libraries(${isoformCleanertests_exe}
