--- a/conda-recipe/meta.yaml
+++ b/conda-recipe/meta.yaml
@@ -11,8 +11,7 @@ build:
   number: 1
   binary_relocation: true
   script:
-    - cmake -H. -Bbuild_conda -G "${CMAKE_GENERATOR}" -DCMAKE_INSTALL_PREFIX=${PREFIX}         # [not win]
-#    - cmake -H. -Bbuild_conda -G "%CMAKE_GENERATOR%" -DCMAKE_INSTALL_PREFIX="%LIBRARY_PREFIX%" # [win]
+    - cmake -H. -Bbuild_conda -G "${CMAKE_GENERATOR}" -DCMAKE_INSTALL_PREFIX=${PREFIX}
     - cmake --build build_conda --target install
 
 requirements:
